--- a/public/app.css
+++ b/public/app.css
@@ -14,18 +14,19 @@ h2 {
 }
 
 h3 {
-  color: #999
+  color: #999;
+  text-align: center;
 }
 
 a, a:visited {
   text-decoration: none;
-  color: #171717
+  text-align: center;
+  color: Peru;
   padding: 2px;
-  margin: 100px;
 }
 
 a:hover {
-  color: #ffA400;
+  color: GreenYellow; 
 }
 
 .color_link {
@@ -49,8 +50,8 @@ a:hover {
 #content {
   background-color: whitesmoke;
   width: 100%;
-  height: 200px;
-  padding: 50px 10px;
+  height: 450px;
+  padding: 20px 10px;
   margin: 5px 0;
   border-radius: 5px;
   color: #171717;
