--- a/public/app.css
+++ b/public/app.css
@@ -74,6 +74,7 @@ a:hover {
 #footer {
   background-color: seaShell;
   width: 100%;
+  height: 40px;
   padding: 10px;
   text-align: right;
   margin-bottom: 4px;
