--- a/public/app.css
+++ b/public/app.css
@@ -74,7 +74,7 @@ a:hover {
 #footer {
   background-color: seaShell;
   width: 100%;
-  height: 40px;
+  height: 20px;
   padding: 10px;
   text-align: right;
   margin-bottom: 4px;
@@ -84,14 +84,17 @@ a:hover {
 
 #footer img {
   float: left;
+  margin-top:0px;
 }
 
 #left {
   float: left;
-  padding-bottom: 10px;
+  padding-bottom: 20px;
+  margin-top:-10px;
 }
 
 #right {
+  float: right;
   padding: 10px;
 }
 
